--- a/LaTeX/sample.bib
+++ b/LaTeX/sample.bib
@@ -285,6 +285,8 @@
   year = {2015}
 }
 
+@
+
 @article{CC01a,
  author = {Chang, Chih-Chung and Lin, Chih-Jen},
  title = {{LIBSVM}: A library for support vector machines},
@@ -303,3 +305,22 @@
   year =         {2006},
 %   address =      {Cambridge, MA},
 }
+
+@techreport{LaViola:1999:SHP:864649,
+ author = {LaViola,Jr., Joseph J.},
+ title = {A Survey of Hand Posture and Gesture Recognition Techniques and Technology},
+ year = {1999},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Abrowncs%3ABrownCS%2F%2FCS-99-11},
+ publisher = {Brown University},
+ address = {Providence, RI, USA},
+} 
+
+@book{Burdea:2003:VRT:829566,
+ author = {Burdea, Grigore C. and Coiffet, Philippe},
+ title = {Virtual Reality Technology},
+ year = {2003},
+ isbn = {0471360899},
+ edition = {2},
+ publisher = {John Wiley \& Sons, Inc.},
+ address = {New York, NY, USA},
+} 
